--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,7 +25,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"></link>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com"></link>
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> </link>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;500;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet"></link>
     <title>PayPerRead</title>
   </head>
   <body>
