--- a/dummy/public/index.html
+++ b/dummy/public/index.html
@@ -27,6 +27,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"></link>
     <link rel="preconnect" href="https://fonts.googleapis.com"></link>
     <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+    <script src="https://kit.fontawesome.com/c2943d7e2a.js" crossorigin="anonymous"></script>
     <script
       src="https://unpkg.com/react-dom/umd/react-dom.production.min.js"
       crossorigin></script>
