--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -46,7 +46,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;500;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet"></link>
     <title>PayPerRead</title>
   </head>
-  <body>
+  <body id="bootstrap-overrides">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
